[project]
name = "lzhgripperwithforcesensor"
version = "0.1.8"
description = "An async TCP client wrapper for controlling a gripper with force sensing and callback support."
authors = [
    { name = "lzh", email = "zhhtdm@hotmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "lzhasynctcpclient>=0.1.6"
]

[project.urls]
Homepage = "https://github.com/zhhtdm/gripper-with-force-sensor"
Repository = "https://github.com/zhhtdm/gripper-with-force-sensor"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
